--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -241,7 +241,7 @@ Links, Gruppen und automatisch generierte Gruppen können auch eine `badge`-Eige
 starlight({
 	sidebar: [
 		{
-			label: 'Guides',
+			label: 'Anleitungen',
 			items: [
 				// Ein Link mit einem "Neu"-Abzeichen
 				{
@@ -266,7 +266,7 @@ Die obige Konfiguration erzeugt die folgende Seitenleiste:
 <SidebarPreview
 	config={[
 		{
-			label: 'Guides',
+			label: 'Anleitungen',
 			items: [
 				{
 					label: 'Komponenten',
