--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -243,7 +243,7 @@ starlight({
 		{
 			label: 'Anleitungen',
 			items: [
-				// Ein Link mit einem "Neu"-Abzeichen
+				// Ein Link mit einem "Neu"-Abzeichen.
 				{
 					label: 'Komponenten',
 					link: '/guides/components/',
@@ -251,7 +251,7 @@ starlight({
 				},
 			],
 		},
-		// Eine automatisch generierte Gruppe mit dem "Veraltet"-Abzeichen
+		// Eine automatisch generierte Gruppe mit dem "Veraltet"-Abzeichen.
 	   	{
 		    	label: 'Referenz',
 		    	badge: 'Veraltet',
