--- a/docs/src/content/docs/pt-br/getting-started.mdx
+++ b/docs/src/content/docs/pt-br/getting-started.mdx
@@ -110,7 +110,7 @@ import FileTree from '../../../components/file-tree.astro';
 
 #### Frontmatter com segurança de tipos
 
-Todas as páginas do Starlight compartilham um [conjunto comum de propriedades frontmatter](/pt-br/reference/frontmatter/) para controlar como a aparência da página:
+Todas as páginas do Starlight compartilham um [conjunto comum de propriedades frontmatter](/pt-br/reference/frontmatter/) para controlar como a página aparece:
 
 ```md
 ---
