i18n(id): Updated some translations into Indonesian

--- a/docs/src/content/docs/id/guides/sidebar.mdx
+++ b/docs/src/content/docs/id/guides/sidebar.mdx
@@ -234,7 +234,7 @@ Konfigurasi frontmatter `sidebar` hanya digunakan untuk tautan yang dihasilkan s
 
 ## Badges
 
-Tautan juga dapat menyertakan properti `badge` untuk menampilkan badge di sebelah label tautan.
+Tautan, grup, dan grup yang dibuat secara otomatis juga dapat menyertakan properti `badge` untuk menampilkan _badge_ di samping labelnya.
 
 ```js
 starlight({
