--- a/docs/src/content/docs/id/guides/i18n.mdx
+++ b/docs/src/content/docs/id/guides/i18n.mdx
@@ -109,7 +109,7 @@ Ketika menggunakan locale `root`, simpan halaman untuk bahasa tersebut langsung 
 
 #### Website monolingual
 
-Secara default, Starlight adalah website monolingual (Inggris). Untuk membuat website monolingual dalam bahasa lain, tetapkan bahasa tersebut sebagai `root` dalam konfigurasi `locales` Anda:
+Secara default, Starlight adalah website monolingual (Inggris). Untuk membuat situs bahasa tunggal dalam bahasa lain, tetapkan bahasa tersebut sebagai `root` dalam konfigurasi `locales` Anda:
 
 ```js
 // astro.config.mjs
@@ -143,7 +143,7 @@ Jika terjemahan belum tersedia untuk suatu bahasa, Starlight akan menampilkan ko
 
 Selain menyimpan file konten yang diterjemahkan, Starlight memungkinkan Anda menerjemahkan string UI default (misalnya, judul "Di halaman ini" dalam daftar isi) sehingga pembaca Anda dapat mengakses website Anda sepenuhnya dalam bahasa yang dipilih.
 
-String UI yang diterjemahkan dalam bahasa Inggris, Ceko, Prancis, Jerman, Italia, Jepang, Portugis, Belanda, Denmark, Spanyol, Turki, Arab, Norwegia, Farsi, Ibrani, Cina (yang disederhanakan), Korea, Indonesia, Rusia, Swedia, Ukraina, dan Vietnam sudah disediakan secara bawaan, dan kami menyambut [kontribusi untuk menambahkan lebih banyak bahasa default](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
+String UI yang diterjemahkan dalam bahasa Inggris, Ceko, Prancis, Jerman, Italia, Jepang, Portugis, Belanda, Denmark, Spanyol, Turki, Arab, Norwegia, Farsi, Ibrani, Cina (yang disederhanakan), Korea, Indonesia, Rusia, Swedia, Ukraina, Vietnam, dan Galisia sudah disediakan secara bawaan, dan kami menyambut [kontribusi untuk menambahkan lebih banyak bahasa default](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
 Anda dapat memberikan terjemahan untuk bahasa tambahan yang Anda dukung — atau mengganti label default kami — melalui koleksi data `i18n`.
 
@@ -202,7 +202,7 @@ Anda dapat memberikan terjemahan untuk bahasa tambahan yang Anda dukung — atau
    }
    ```
 
-   Modal pencarian Starlight didukung oleh library [Pagefind](https://pagefind.app/).
+   Modal pencarian Starlight didukung oleh pustaka [Pagefind](https://pagefind.app/).
    Anda dapat mengatur terjemahan untuk UI Pagefind di file JSON yang sama menggunakan properti-properti `pagefind`:
 
    ```json
