fix double sentences

--- a/docs/src/content/docs/id/getting-started.mdx
+++ b/docs/src/content/docs/id/getting-started.mdx
@@ -171,4 +171,4 @@ Lihat panduan di sidebar untuk bantuan menambahkan konten dan menyesuaikan situs
 Jika jawaban Anda tidak dapat ditemukan dalam dokumentasi ini, silakan kunjungi [Dokumentasi Astro](https://docs.astro.build) untuk dokumentasi lengkap Astro.
 Pertanyaan Anda mungkin terjawab dengan memahami cara kerja Astro secara umum, di bawah tema Starlight ini.
 
-Anda juga dapat memeriksa masalah Starlight yang diketahui di [GitHub](https://github.com/withastro/starlight/issues), dan mendapatkan bantuan di Astro Discord dari komunitas kami yang aktif dan ramah! Kirimkan pertanyaan di forum #support kami dengan tag "starlight", atau kunjungi kanal #starlight khusus kami untuk mendiskusikan perkembangan terkini dan banyak lagi! dan dapatkan bantuan di [Astro Discord](https://astro.build/chat/) dari komunitas kami yang aktif dan ramah! Kirimkan pertanyaan di forum `#support` kami dengan tag "starlight", atau kunjungi kanal `#starlight` khusus kami untuk mendiskusikan perkembangan terkini dan banyak lagi!
+Anda juga dapat memeriksa masalah Starlight yang diketahui di [GitHub](https://github.com/withastro/starlight/issues), dan dapatkan bantuan di [Astro Discord](https://astro.build/chat/) dari komunitas kami yang aktif dan ramah! Kirimkan pertanyaan di forum `#support` kami dengan tag "starlight", atau kunjungi kanal `#starlight` khusus kami untuk mendiskusikan perkembangan terkini dan banyak lagi!
