Fix missing translations

--- a/docs/src/content/docs/id/getting-started.mdx
+++ b/docs/src/content/docs/id/getting-started.mdx
@@ -114,8 +114,8 @@ Semua halaman Starlight berbagi [properti _frontmatter_ umum](/id/reference/fron
 
 ```md
 ---
-title: Hello, World!
-description: This is a page in my Starlight-powered site
+title: Halo, Dunia!
+description: Ini adalah halaman di situs saya yang didukung Starlight
 ---
 ```
 
@@ -126,7 +126,7 @@ Jika Anda lupa sesuatu yang penting, Starlight akan memberi tahu Anda.
 - **Mengkonfigurasi:** Pelajari tentang opsi umum dalam ["Menyesuaikan Starlight”](/id/guides/customization/).
 - **Navigasi:** Siapkan sidebar Anda dengan panduan ["Navigasi Sidebar”](/id/guides/sidebar/).
 - **Komponen:** Temukan kartu, tab dan bawaan lainnya di dalam panduan ["Komponen”](/id/guides/components/).
-- **Deploy:** Publikasikan karya Anda dengan panduan [“Deploy your site”](https://docs.astro.build/en/guides/deploy/) di dokumentasi Astro.
+- **Sebarkan:** Publikasikan karya Anda dengan panduan [“_Deploy_ situs Anda”](https://docs.astro.build/en/guides/deploy/) di dokumentasi Astro.
 
 ## Memperbarui Starlight
 
