--- a/docs/src/content/docs/id/guides/sidebar.mdx
+++ b/docs/src/content/docs/id/guides/sidebar.mdx
@@ -242,13 +242,19 @@ starlight({
 		{
 			label: 'Panduan',
 			items: [
-				// Tautan dengan badge "Baru"
+				// Tautan dengan badge "Baru".
 				{
 					label: 'Komponen',
 					link: '/guides/components/',
 					badge: 'Baru',
 				},
 			],
+		},
+		// Grup yang dibuat secara otomatis dengan badge "Ditinggalkan"
+		{
+			label: 'Referensi',
+			badge: 'Ditinggalkan',
+			autogenerate: { directory: 'reference' },
 		},
 	],
 });
@@ -265,6 +271,24 @@ Konfigurasi di atas akan menghasilkan sidebar berikut:
 					label: 'Komponen',
 					link: '/id/guides/components/',
 					badge: { text: 'Baru', variant: 'default' },
+				},
+			],
+		},
+		{
+			label: 'Referensi',
+			badge: { text: 'Ditinggalkan', variant: 'default' },
+			items: [
+				{
+          label: 'Referensi Konfigurasi',
+					link: '/id/reference/configuration/',
+				},
+				{
+					label: 'Referensi Frontmatter',
+					link: '/id/reference/frontmatter/',
+				},
+				{
+					label: 'Referensi Overrides',
+					link: '/id/reference/overrides/',
 				},
 			],
 		},
