--- a/docs/src/content/docs/id/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/id/guides/css-and-tailwind.mdx
@@ -278,8 +278,7 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	}}
 >
 	<Fragment slot="css-docs">
-		Tambahkan CSS berikut ke proyek Anda dalam [file CSS
-		custom](#custom-css-styles) untuk menerapkan tema ini ke website Anda.
+		Tambahkan CSS berikut ke proyek Anda dalam [file CSS custom](#custom-css-styles) untuk menerapkan tema ini ke website Anda.
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		Contoh [file konfigurasi Tailwind ](#styling-starlight-dengan-tailwind) di
