--- a/docs/src/content/docs/id/manual-setup.mdx
+++ b/docs/src/content/docs/id/manual-setup.mdx
@@ -12,7 +12,7 @@ Jika Anda ingin menambahkan Starlight ke proyek Astro yang sudah ada, berikut in
 
 Untuk mengikuti panduan ini, Anda membutuhkan proyek Astro yang sudah berjalan.
 
-### Menambahkan Starlight integration
+### Menambahkan integrasi Starlight
 
 Starlight adalah sebuah [integrasi Astro](https://docs.astro.build/en/guides/integrations-guide/). Tambahkan ke website Anda dengan cara menjalankan perintah `astro add` di _root directory_ proyek Anda:
 
@@ -64,7 +64,7 @@ Untuk opsi lengkapnya tersedia di [referensi pengaturan Starlight](/id/reference
 
 Starlight dibangun berdasarkan fitur [koleksi konten](https://docs.astro.build/en/guides/content-collections/) oleh Astro, yang dapat dikonfigurasi di file `src/content/config.ts`.
 
-Buat baru atau _update_ file konfigurasi koleksi konten Anda, menambahkan koleksi bernama `docs` yang menggunakan skema `docsSchema` dari Starlight:
+Buat baru atau perbarui file konfigurasi koleksi konten Anda, menambahkan koleksi bernama `docs` yang menggunakan skema `docsSchema` dari Starlight:
 
 ```js ins={3,6}
 // src/content/config.ts
