add new user showcase
https://docs.ethfollow.xyz/

--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -30,6 +30,13 @@ These community tools, plugins, and integrations work alongside Starlight to ext
 		title="FeelBack"
 		description="Add a user feedback system to your docs pages."
 	/>
+
+	<LinkCard
+		href="https://docs.ethfollow.xyz/"
+		title="Ethereum Follow Protocol"
+		description="The social graph for Ethereum."
+	/>
+
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-blog"
 		title="starlight-blog"
