reset getting-started & components

--- a/docs/src/content/docs/zh-cn/getting-started.mdx
+++ b/docs/src/content/docs/zh-cn/getting-started.mdx
@@ -83,7 +83,7 @@ description: This is a page in my Starlight-powered site
 
 ## 更新 Starlight
 
-:::tip
+:::tip[提示]
 由于 Starlight 是 beta 软件，所以会经常更新和改进。请务必定期更新 Starlight！
 :::
 
