--- a/docs/src/content/docs/zh-cn/guides/components.mdx
+++ b/docs/src/content/docs/zh-cn/guides/components.mdx
@@ -112,7 +112,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	</Card>
 </CardGrid>
 
-:::tip
+:::tip[提示]
 在主页上使用卡片网格来显示项目的关键特性。
 添加 `stagger` 属性来垂直移动第二列的卡片，并增加视觉效果：
 
