--- a/packages/starlight/translations/hi.json
+++ b/packages/starlight/translations/hi.json
@@ -7,7 +7,7 @@
   "themeSelect.accessibleLabel": "थीम चुनें",
   "themeSelect.dark": "अँधेरा",
   "themeSelect.light": "रोशनी",
-  "themeSelect.auto": "स्वत:",
+  "themeSelect.auto": "स्वत",
   "languageSelect.accessibleLabel": "भाषा चुने",
   "menuButton.accessibleLabel": "मेन्यू",
   "sidebarNav.accessibleLabel": "मुख्य",
