--- a/packages/starlight/translations/hi.json
+++ b/packages/starlight/translations/hi.json
@@ -15,7 +15,7 @@
   "tableOfContents.overview": "अवलोकन",
   "i18n.untranslatedContent": "यह कंटेंट अभी तक आपकी भाषा में उपलब्ध नहीं है.",
   "page.editLink": "पृष्ठ संपादित करें",
-  "page.lastUpdated": "आखरी अद्यतन:",
+  "page.lastUpdated": "आखिरी अद्यतन:",
   "page.previousLink": "पिछला",
   "page.nextLink": "अगला",
   "404.text": "यह पृष्ठ नहीं मिला। URL जांचें या खोज बार का उपयोग करने का प्रयास करें।",
