--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -235,7 +235,7 @@ Die `sidebar`-Frontmatter-Konfiguration wird nur für automatisch generierte Lin
 
 ## Abzeichen
 
-Links können auch eine `badge`-Eigenschaft enthalten, um ein Abzeichen neben dem Link-Label anzuzeigen.
+Links, Gruppen und automatisch generierte Gruppen können auch eine `badge`-Eigenschaft enthalten, um ein Abzeichen neben dem jeweiligen Text anzuzeigen.
 
 ```js
 starlight({
@@ -251,6 +251,12 @@ starlight({
 				},
 			],
 		},
+		// Eine automatisch generierte Gruppe mit dem "Veraltet"-Abzeichen.
+	   	{
+		    	label: 'Referenz',
+		    	badge: 'Veraltet',
+		    	autogenerate: { directory: 'reference' },
+	  	},
 	],
 });
 ```
@@ -269,6 +275,24 @@ Die obige Konfiguration erzeugt die folgende Seitenleiste:
 				},
 			],
 		},
+		{
+		    	label: 'Referenz',
+		    	badge: { text: 'Veraltet', variant: 'default'},
+		    	items: [
+				{
+					label: 'Konfigurationsreferenz',
+					link: '/reference/configuration/',
+				},
+				{
+					label: 'Frontmatter Referenz',
+					link: '/reference/frontmatter/',
+				},
+				{
+					label: 'Komponenten-Ersetzung Referenz',
+					link: '/reference/overrides/',
+				},
+			],
+  		},
 	]}
 />
 
