added default translations to note blocks

--- a/docs/src/content/docs/ru/guides/sidebar.mdx
+++ b/docs/src/content/docs/ru/guides/sidebar.mdx
@@ -241,7 +241,7 @@ sidebar:
 	]}
 />
 
-:::note[Заметка]
+:::note
 Конфигурация `sidebar` в метаданных используется только для автоматически генерируемых ссылок и будет проигнорирована для вручную определенных ссылок.
 :::
 
