fix: remove `startsSentence` prop
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/id/guides/i18n.mdx
+++ b/docs/src/content/docs/id/guides/i18n.mdx
@@ -145,7 +145,7 @@ import LanguagesList from '../../../../components/languages-list.astro';
 
 Selain menyimpan file konten yang diterjemahkan, Starlight memungkinkan Anda menerjemahkan string UI default (misalnya, judul "Di halaman ini" dalam daftar isi) sehingga pembaca Anda dapat mengakses website Anda sepenuhnya dalam bahasa yang dipilih.
 
-String UI yang diterjemahkan dalam bahasa <LanguagesList startsSentence /> sudah disediakan secara bawaan,
+String UI yang diterjemahkan dalam bahasa <LanguagesList /> sudah disediakan secara bawaan,
 dan kami menyambut [kontribusi untuk menambahkan lebih banyak bahasa default](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
 Anda dapat memberikan terjemahan untuk bahasa tambahan yang Anda dukung — atau mengganti label default kami — melalui koleksi data `i18n`.
