i18n(id): replace languages list with component (#1089)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/id/guides/i18n.mdx
+++ b/docs/src/content/docs/id/guides/i18n.mdx
@@ -141,9 +141,12 @@ Jika terjemahan belum tersedia untuk suatu bahasa, Starlight akan menampilkan ko
 
 ## Terjemahkan UI Starlight
 
+import LanguagesList from '../../../../components/languages-list.astro';
+
 Selain menyimpan file konten yang diterjemahkan, Starlight memungkinkan Anda menerjemahkan string UI default (misalnya, judul "Di halaman ini" dalam daftar isi) sehingga pembaca Anda dapat mengakses website Anda sepenuhnya dalam bahasa yang dipilih.
 
-String UI yang diterjemahkan dalam bahasa Inggris, Ceko, Prancis, Jerman, Italia, Jepang, Portugis, Belanda, Denmark, Spanyol, Turki, Arab, Norwegia, Farsi, Ibrani, Cina (yang disederhanakan), Korea, Indonesia, Rusia, Swedia, Ukraina, Vietnam, dan Galisia sudah disediakan secara bawaan, dan kami menyambut [kontribusi untuk menambahkan lebih banyak bahasa default](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
+String UI yang diterjemahkan dalam bahasa <LanguagesList /> sudah disediakan secara bawaan,
+dan kami menyambut [kontribusi untuk menambahkan lebih banyak bahasa default](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
 Anda dapat memberikan terjemahan untuk bahasa tambahan yang Anda dukung — atau mengganti label default kami — melalui koleksi data `i18n`.
 
