Update path for hero image
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/hi/index.mdx
+++ b/docs/src/content/docs/hi/index.mdx
@@ -20,7 +20,7 @@ hero:
   title: अपने दस्तावेज़ों को Starlight से चमकाएँ
   tagline: एक शानदार दस्तावेज़ीकरण वेबसाइट बनाने के लिए आपको जो कुछ भी चाहिए वह सब कुछ इधर हैं। तेज़, अभिगम्य और उपयोग में आसान।
   image:
-    file: ../../assets/hero-star.webp
+    file: ../../../assets/hero-star.webp
   actions:
     - text: शुरू हो जाओ
       icon: right-arrow
