Update path for about.astro component

--- a/docs/src/content/docs/hi/index.mdx
+++ b/docs/src/content/docs/hi/index.mdx
@@ -32,7 +32,7 @@ hero:
 ---
 
 import { CardGrid, Card } from '@astrojs/starlight/components';
-import AboutAstro from '../../components/about-astro.astro';
+import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
 	<Card title="दस्तावेज़ीकरण जो प्रसन्न करता है" icon="open-book">
