i18n(hi): improve translation across index page

--- a/docs/src/content/docs/hi/index.mdx
+++ b/docs/src/content/docs/hi/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Starlight 🌟 Astro के साथ दस्तावेज़ीकरण साइटें बनाएं
+title: Starlight 🌟 दस्तावेज़ीकरण साइटें बनाएं Astro के साथ
 head:
   - tag: title
-    content: Starlight 🌟 Astro के साथ दस्तावेज़ीकरण साइटें बनाएं
+    content: Starlight 🌟 दस्तावेज़ीकरण साइटें बनाएं Astro के साथ
 description: Starlight आपको Astro के साथ सुंदर, उच्च प्रदर्शन वाली दस्तावेज़ीकरण वेबसाइट बनाने में मदद करता है।
 template: splash
 editUrl: false
@@ -12,13 +12,13 @@ banner:
     <span class="ph-banner">
       <span class="ph-houston"><img src="/ph-houston.svg" alt="" width="72" height="72"/></span>
       <span class="ph-text">
-        <strong>उत्पाद खोजकर्ताओं का स्वागत है&nbsp;👋</strong>
+        <strong>स्वागत है उत्पाद शिकारियों का &nbsp;👋</strong>
         <a href="https://www.producthunt.com/posts/starlight-by-astro">हम अभी लाइव हैं!</a>
       </span>
     </span>
 hero:
   title: अपने दस्तावेज़ों को Starlight से चमकाएँ
-  tagline: एक शानदार दस्तावेज़ीकरण वेबसाइट बनाने के लिए आपको जो कुछ भी चाहिए वह सब कुछ इधर हैं। तेज़, अभिगम्य और उपयोग में आसान।
+  tagline: एक तारकीय दस्तावेज़ीकरण वेबसाइट बनाने के लिए आपको जो कुछ भी चाहिए वह सब कुछ इधर हैं। तेज़, अभिगम्य और उपयोग में आसान।
   image:
     file: ../../../assets/hero-star.webp
   actions:
@@ -35,27 +35,27 @@ import { CardGrid, Card } from '@astrojs/starlight/components';
 import AboutAstro from '../../../components/about-astro.astro';
 
 <CardGrid stagger>
-	<Card title="दस्तावेज़ीकरण जो प्रसन्न करता है" icon="open-book">
-		इसमें शामिल हैं: साइट नेविगेशन, खोज, अंतर्राष्ट्रीयकरण, SEO, पढ़ने में आसान टाइपोग्राफी, कोड हाइलाइटिंग,
-    डार्क मोड और बहुत कुछ।
+	<Card title="दस्तावेज़ीकरण जो आनंदित करता है" icon="open-book">
+		इसमें शामिल हैं: साइट मार्गदर्शन, खोज, अंतर्राष्ट्रीयकरण, SEO, पढ़ने में
+		आसान Typography, कोड हाइलाइटिंग, डार्क मोड और बहुत कुछ।
 	</Card>
 	<Card title="Astro द्वारा संचालित" icon="rocket">
-    Astro की पूरी शक्ति और प्रदर्शन का लाभ उठाएं। अपने पसंदीदा Astro एकीकरण और लाइब्रेरी के साथ
-    Starlight का विस्तार करें।
+		Astro की पूरी शक्ति और प्रदर्शन का लाभ उठाएं। विस्तार करें Starlight का अपने
+		पसंदीदा Astro एकीकरण और लाइब्रेरी का उपयोग करके।
 	</Card>
-	<Card title="Markdown, Markdoc, and MDX" icon="document">
-    अपनी पसंदीदा Markup भाषा लाएँ। Starlight आपको बिल्ट-इन फ्रंटमैटर सत्यापन के साथ TypeScript
-    प्रकार-सुरक्षा देता है ।
+	<Card title="Markdown, Markdoc, और MDX" icon="document">
+		अपनी पसंदीदा Markup भाषा लाएँ। Starlight आपको बिल्ट-इन फ्रंटमैटर मान्यकरण के
+		साथ TypeScript प्रकार-सुरक्षा देता है ।
 	</Card>
-	<Card title="Bring your own UI components" icon="puzzle">
-    Starlight एक फ्रेमवर्क-अज्ञेयवादी, संपूर्ण दस्तावेज़ समाधान के रूप में उपलब्ध है। React, Vue,
-    Svelte, Solid और अन्य के साथ विस्तार करें।
+	<Card title="अपने स्वयं के UI अवयवों लाएँ" icon="puzzle">
+		Starlight एक फ्रेमवर्क-अज्ञेयवादी, संपूर्ण दस्तावेज़ समाधान के रूप में
+		उपलब्ध है। React, Vue, Svelte, Solid और अन्य के साथ विस्तार करें।
 	</Card>
 </CardGrid>
 
-<AboutAstro title="Brought to you by">
+<AboutAstro title="आप तक लाने वाले हैं">
 Astro गति के लिए डिज़ाइन किया गया ऑल-इन-वन वेब फ्रेमवर्क है।
-अपनी कंटेंट को कहीं से भी खींचें और हर जगह डिप्लॉय करें, यह सब आपके पसंदीदा UI अवयवों और लाइब्रेरीज़ द्वारा संचालित है।
+अपने कंटेंट को कहीं से भी खींचें और हर जगह डिप्लॉय करें, यह सब आपके पसंदीदा UI अवयवों और लाइब्रेरीज़ द्वारा संचालित है।
 
 [Astro के बारे में जानें](https://astro.build/)
 
