Update path to getting-started.mdx
Co-authored-by: HiDeoo <494699+HiDeoo@users.noreply.github.com>

--- a/docs/src/content/docs/hi/index.mdx
+++ b/docs/src/content/docs/hi/index.mdx
@@ -25,7 +25,7 @@ hero:
     - text: शुरू हो जाओ
       icon: right-arrow
       variant: primary
-      link: /getting-started/
+      link: /hi/getting-started/
     - text: GitHub पर देखें
       icon: external
       link: https://github.com/withastro/starlight
