--- a/docs/src/content/docs/reference/configuration.mdx
+++ b/docs/src/content/docs/reference/configuration.mdx
@@ -373,7 +373,7 @@ starlight({
 });
 ```
 
-In addition to the standard Expressive Code options, you can customize your code blocks with the following Starlight-specific properties:
+In addition to the standard Expressive Code options, you can also set the following Starlight-specific properties in your `expressiveCode` config to further customize theme behavior for your code blocks :
 
 #### `themes`
 
